test_output.txt
FAIL src/financial-providers/tests/hiperbanco-integration.service.spec.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation, specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\marco\Projetos Pessoais\api-payments\node_modules\uuid\dist-node\index.js:1
    export { default as MAX } from './max.js';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

       8 | import { ErrorCode } from '../../common/errors/enums/error-code.enum';
       9 | import { AppLoggerService } from '../../common/logger/logger.service';
    > 10 | import { v4 as uuidv4 } from 'uuid';
         | ^
      11 | import { FinancialProvider } from '@/common/enums/financial-provider.enum';
      12 |
      13 | @Injectable()

      at Runtime.createScriptFromCode (../node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (financial-providers/services/financial-credentials.service.ts:10:1)
      at Object.<anonymous> (financial-providers/hiperbanco/hiperbanco-auth.service.ts:3:1)
      at Object.<anonymous> (financial-providers/tests/factory/hiperbanco.service.factory.ts:3:1)
      at Object.<anonymous> (financial-providers/tests/hiperbanco-integration.service.spec.ts:1:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.985 s
Ran all test suites matching src/financial-providers/tests/hiperbanco-integration.service.spec.ts.
